[package]
name = "asimov-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["http", "tracing"]
std = ["dogma/std", "jiff/std", "openai/std", "tracing?/std"]
tracing = ["dep:tracing"]
unstable = ["https", "mdns", "ssdp"]

# Protocols:
http = ["dep:axum", "dep:axum-prometheus", "dep:tower-http"]
https = ["http"]
mdns = ["dep:mdns-sd", "dep:lazy_static", "dep:local-ip-address"]
ssdp = []

# Protocols on top of HTTP:
graphql = ["http"]
gsp = ["http"]
sparql = ["http"]

[dependencies]
asimov-runner.workspace = true
asimov-prompt = { workspace = true, features = ["openai"] }
axum = { workspace = true, optional = true }
axum-prometheus = { workspace = true, optional = true }
bs58.workspace = true
dogma.workspace = true
jiff.workspace = true
lazy_static = { version = "1.5", optional = true }
local-ip-address = { version = "0.6", optional = true }
mdns-sd = { version = "0.13", optional = true }
openai = { workspace = true, features = ["serde"] }
stability.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http = { version = "0.6", default-features = false, features = [
    "cors",
], optional = true }
tracing = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "mdns-client"
path = "examples/mdns-client.rs"
required-features = ["mdns"]

[[example]]
name = "mdns-server"
path = "examples/mdns-server.rs"
required-features = ["mdns"]
