[package]
name = "asimov-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["app", "http", "tracing"]
std = ["bs58/std", "dogma/std", "jiff/std", "openai/std", "tracing?/std"]
tracing = ["dep:tracing", "tower-http/trace"]
unstable = ["https", "mdns", "ssdp"]

# Protocols:
http = [
    "persistence",
    "dep:axum",
    "dep:axum-prometheus",
    "dep:http",
    "dep:tower-http",
]
https = ["http"]
mdns = ["dep:mdns-sd", "dep:lazy_static", "dep:local-ip-address"]
ssdp = []

# Protocols on top of HTTP:
app = ["http", "dep:axum-embed", "dep:rust-embed"]
graphql = ["http"]
gsp = ["http"]
sparql = ["http"]
mcp = ["http"]

# Other:
persistence = ["dep:serde", "dep:serde_json"]

[dependencies]
asimov-runner.workspace = true
asimov-prompt = { workspace = true, features = ["openai"] }
async-trait.workspace = true
async-stream.workspace = true
bs58.workspace = true
dogma.workspace = true
futures.workspace = true
jiff.workspace = true
openai = { workspace = true, features = ["serde"] }
rmcp = { workspace = true, features = [
    "base64",
    "macros",
    "server",
    "transport-sse-server",
] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

# Optional dependencies:
axum = { workspace = true, features = ["tokio"], optional = true }
axum-embed = { workspace = true, optional = true }
axum-prometheus = { workspace = true, optional = true }
http = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
local-ip-address = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors"], optional = true }
tracing = { workspace = true, features = ["attributes"], optional = true }

[dev-dependencies]
axum-test.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true

[[example]]
name = "mdns-client"
path = "examples/mdns-client.rs"
required-features = ["mdns"]

[[example]]
name = "mdns-server"
path = "examples/mdns-server.rs"
required-features = ["mdns"]

[[example]]
name = "persistence"
path = "examples/persistence.rs"
required-features = ["http", "persistence"]
