[package]
name = "asimov-snapshot"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing", "storage-fs"]
std = ["dogma/std", "hex/std", "jiff/std", "tracing/std"]
storage-fs = ["dep:cap-std", "dep:hex", "dep:sha2", "std"]
tracing = []
unstable = []

[dependencies]
asimov-env.workspace = true
asimov-module.workspace = true
asimov-patterns.workspace = true
asimov-runner.workspace = true
async-trait.workspace = true
cap-std = { version = "3.4", optional = true }
dogma.workspace = true
jiff.workspace = true
hex = { version = "0.4", optional = true, default-features = false }
stability.workspace = true
sha2 = { version = "0.10", optional = true }
tracing.workspace = true

[dev-dependencies]
tempfile = { version = "3.20.0", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
	"fmt",
] }
