[package]
name = "asimov-snapshot"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing", "storage-fs"]
std = ["dogma/std", "hex/std", "jiff/std", "tracing/std"]
storage-fs = ["dep:cap-std", "dep:cap-tempfile", "dep:hex", "dep:sha2", "std"]
tracing = []
unstable = []

[dependencies]
asimov-env.workspace = true
asimov-module.workspace = true
asimov-patterns.workspace = true
asimov-runner.workspace = true
async-trait.workspace = true
bon.workspace = true
dogma.workspace = true
jiff.workspace = true
tracing = { workspace = true, features = ["attributes"] }

# Optional dependencies:
cap-std = { workspace = true, optional = true }
cap-tempfile = { version = "3.4", optional = true }
hex = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
