[package]
name = "asimov-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["ffi", "sdk"]
categories = ["external-ffi-bindings"]
publish.workspace = true

[features]
default = []
dylib = ["dep:libloading"]
std = []

[dependencies]
num-derive = "0.4"
num-traits = "0.2"

[target.'cfg(any(unix, windows))'.dependencies.libloading]
version = "0.8"
optional = true
