[package]
name = "asimov-sys"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["asimov", "ai", "sdk", "ffi"]
categories = ["external-ffi-bindings"]
publish = false

[features]
default = []
dylib = ["dep:libloading"]
std = []
unstable = []

[dependencies]
num-derive.workspace = true
num-traits.workspace = true

[target.'cfg(any(unix, windows))'.dependencies.libloading]
workspace = true
optional = true
